--- a/www/home.html
+++ b/www/home.html
@@ -32,6 +32,7 @@
     <header></header>
     <!-- Main content-->
     <main class="content" data-page="home">
+      <h1>Testing</h1>
       <section class="screen">
         <svg data-section-svg="a" data-section-svg-fill="#51E3C2" width="1280px" height="577px" viewBox="0 0 1280 577">
           <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
