--- a/www/home.html
+++ b/www/home.html
@@ -52,6 +52,10 @@
           <path fill-rule="evenodd" stroke-width="2" opacity=".102" d="M275.474 81.32c10.25 11.001 15.25 24.751 15.25 41.25 0 18.25-6 33-18.25 44.501-12.25 11.499-28.25 17.249-48 17.249s-35.75-5.75-48-17.249c-12.25-11.501-18.25-26.251-18.25-44.501 0-13.75 3.75-25.749 11-36.251l51.75-80.749h50.75l-37 55.75c17 2.251 30.5 8.751 40.75 20zm-35.5 25.751c-4-3.751-9.25-5.501-15.5-5.501s-11.5 1.75-15.5 5.501c-4 3.75-6 8.75-6 15.499 0 13.251 8.75 20.749 21.5 20.749 12.25 0 21.5-7.749 21.5-20.749 0-6.749-2-11.749-6-15.499zM74.479 184.32c-22.75 0-40.75-8.249-53.5-24.749-12.75-16.751-19-38.75-19-66.501 0-27.75 6.25-49.749 19-66.251 12.75-16.748 30.75-24.999 53.5-24.999s40.5 8.251 53.25 24.999c12.75 16.502 19.25 38.501 19.25 66.251 0 27.751-6.5 49.75-19.25 66.501-12.75 16.5-30.5 24.749-53.25 24.749zm0-139c-18.5 0-27.75 16-27.75 47.75s9.25 47.75 27.75 47.75 27.75-16 27.75-47.75-9.25-47.75-27.75-47.75z"
           />
         </symbol>
+        <symbol id="icon-circle-round-bottom" viewBox="0 0 1282 80">
+          <path d="M0 80h641.4C320.9 80 0 0 0 0v80z" />
+          <path d="M1281 0S961.4 80 641.4 80H1282V0h-1z" />
+        </symbol>
         <symbol id="icon-facebook" viewBox="0 0 512 512">
           <title>facebook</title>
           <path class="cls-1" d="M256 0C114.6 0 0 106.1 0 237c0 74.6 37.2 141.1 95.4 184.6V512l87.2-47.8a276.72 276.72 0 0 0 73.4 9.9c141.4 0 256-106.1 256-237S397.4 0 256 0z" />
@@ -237,6 +241,16 @@
         </div>
       </section>
       <section class="how">
+        <div class="how__gradient">
+          <div class="how__gradient-el"></div>
+          <div class="how__gradient-el"></div>
+          <div class="how__gradient-el"></div>
+        </div>
+        <div class="how__round-bottom">
+          <svg viewBox="0 0 1282 81">
+            <path d="M0,80.5h641.4C320.9,80.5,0,0.5,0,0.5V80.5z" />
+            <path d="M1281,0.5c0,0-319.6,80-639.6,80H1282v-80H1281z" /> </svg>
+        </div>
         <div class="how__container container">
           <div class="how__title">Как это работает</div>
           <div class="how__text">Любая продажа строится на коммуникациях с клиентом, будь то знакомство с продуктом, представление новых функций или поддержка. Мы выводим процесс коммуникаций с клиентом инновационный уровень, разрабатвая боты под популярные/следующие платформы:</div>
@@ -334,9 +348,52 @@
               <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
             </div>
           </div>
+          <div class="how__history-el how__history-el_4">
+            <div class="how__history-canvas">
+              <img src="static/img/test/test4.png" alt="image">
+            </div>
+            <div class="how__history-number">
+              <svg class="icon icon-04">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-04"></use>
+              </svg>
+            </div>
+            <div class="how__history-content">
+              <div class="how__history-title">Тестирование</div>
+              <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
+            </div>
+          </div>
+          <div class="how__history-el how__history-el_5">
+            <div class="how__history-canvas">
+              <img src="static/img/test/test5.png" alt="image">
+            </div>
+            <div class="how__history-number">
+              <svg class="icon icon-05">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-05"></use>
+              </svg>
+            </div>
+            <div class="how__history-content">
+              <div class="how__history-title">Публикация бота на странице Facebook</div>
+              <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
+            </div>
+          </div>
+          <div class="how__history-el how__history-el_6">
+            <div class="how__history-canvas">
+              <img src="static/img/test/test6.png" alt="image">
+            </div>
+            <div class="how__history-number">
+              <svg class="icon icon-06">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-06"></use>
+              </svg>
+            </div>
+            <div class="how__history-content">
+              <div class="how__history-title">Профит</div>
+              <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
+            </div>
+          </div>
         </div>
         </div>
       </section>
+      <div style="height: 1000px; background: white;"></div>
     </main>
     <!-- Footer-->
     <!--mixin footer()footer-->
