--- a/www/home.html
+++ b/www/home.html
@@ -219,6 +219,7 @@
     <!-- Main content-->
     <main class="content" data-page="home">
       <section class="screen">
+        <div data-line></div>
         <div class="screen__content">
           <div class="screen__container container">
             <div class="screen__content-in">
@@ -241,6 +242,7 @@
         </div>
       </section>
       <section class="how">
+        <div data-line></div>
         <div class="how__gradient">
           <div class="how__gradient-el"></div>
           <div class="how__gradient-el"></div>
@@ -389,7 +391,133 @@
         </div>
         </div>
       </section>
-      <div style="height: 1000px; background: white;"></div>
+      <section class="loc">
+        <div data-line></div>
+        <div class="loc__container container">
+          <div class="loc__title">Где это работает</div>
+          <div class="loc__slider-wrap">
+            <div class="loc__slider-counter">
+              <div class="loc__slider-counter-current"></div>
+              <div class="loc__slider-counter-total"></div>
+            </div>
+            <div class="loc__slider-btn">
+              <a class="btn btn_default" href="#!">Заказать себе бот</a>
+            </div>
+            <div class="loc__slider">
+              <div class="loc__slider-item">
+                <div class="loc__slider-row">
+                  <div class="loc__slider-left">
+                    <div class="loc__slider-title">Новостные агенства</div>
+                    <div class="loc__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу. Боты отправляют текстовый, графический и видео контент. Возможно получение новостей от подписчиков.</div>
+                  </div>
+                  <div class="loc__slider-right">
+                    <div class="loc__slider-image">
+                      <img class="loc__slider-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
+                      <svg class="loc__slider-image-svg" viewBox="0 0 498 434" preserveAspectRatio="none">
+                        <path d="M0,0v434h498V0H0z M274,433.1C151.8,442.1,63,386.2,28,330.8C-23.5,249,9.6,91.5,21,69.1S69.8-18.4,154.1,5c84.7,23.5,48.6,11.8,182.8,4.1s153.5,109.5,153.5,109.5C520.4,304.1,464.2,419,274,433.1z"></path>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="loc__slider-item">
+                <div class="loc__slider-row">
+                  <div class="loc__slider-left">
+                    <div class="loc__slider-title">Новостные агенства и популярные агенства</div>
+                    <div class="loc__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов.</div>
+                  </div>
+                  <div class="loc__slider-right">
+                    <div class="loc__slider-image">
+                      <img class="loc__slider-img" src="static/img/content/loc-slider-2.jpg" alt="image" title="" />
+                      <svg class="loc__slider-image-svg" viewBox="0 0 498 434" preserveAspectRatio="none">
+                        <path d="M0,0v434h498V0H0z M274,433.1C151.8,442.1,63,386.2,28,330.8C-23.5,249,9.6,91.5,21,69.1S69.8-18.4,154.1,5c84.7,23.5,48.6,11.8,182.8,4.1s153.5,109.5,153.5,109.5C520.4,304.1,464.2,419,274,433.1z"></path>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="loc__slider-item">
+                <div class="loc__slider-row">
+                  <div class="loc__slider-left">
+                    <div class="loc__slider-title">Новостные агенства будущего</div>
+                    <div class="loc__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.</div>
+                  </div>
+                  <div class="loc__slider-right">
+                    <div class="loc__slider-image">
+                      <img class="loc__slider-img" src="static/img/content/loc-slider-3.jpg" alt="image" title="" />
+                      <svg class="loc__slider-image-svg" viewBox="0 0 498 434" preserveAspectRatio="none">
+                        <path d="M0,0v434h498V0H0z M274,433.1C151.8,442.1,63,386.2,28,330.8C-23.5,249,9.6,91.5,21,69.1S69.8-18.4,154.1,5c84.7,23.5,48.6,11.8,182.8,4.1s153.5,109.5,153.5,109.5C520.4,304.1,464.2,419,274,433.1z"></path>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="advantage">
+        <div data-line></div>
+        <div class="advantage__container container">
+          <div class="advantage__title"></div>
+          <div class="advantage__list">
+            <div class="advantage__list-item">
+              <div class="advantage__list-item-row">
+                <div class="advantage__list-item-left"></div>
+                <div class="advantage__list-item-right">
+                  <div class="advantage__list-item-title">Целевой контент в коммуникациях</div>
+                </div>
+              </div>
+              <div class="advantage__list-item-text">Подключение внешней информационной системы или базы знаний о продукте/услуге.</div>
+            </div>
+            <div class="advantage__list-item">
+              <div class="advantage__list-item-row">
+                <div class="advantage__list-item-left"></div>
+                <div class="advantage__list-item-right">
+                  <div class="advantage__list-item-title">Мультимедийный контент</div>
+                </div>
+              </div>
+              <div class="advantage__list-item-text">Отправка фото и видео контента, местоположения.</div>
+            </div>
+            <div class="advantage__list-item">
+              <div class="advantage__list-item-row">
+                <div class="advantage__list-item-left"></div>
+                <div class="advantage__list-item-right">
+                  <div class="advantage__list-item-title">Статистика коммуникаций</div>
+                </div>
+              </div>
+              <div class="advantage__list-item-text">Различная статистика позволит правильно спозиционировать ваш продукт.</div>
+            </div>
+            <div class="advantage__list-item">
+              <div class="advantage__list-item-row">
+                <div class="advantage__list-item-left"></div>
+                <div class="advantage__list-item-right">
+                  <div class="advantage__list-item-title">Программируемые сценарии бота</div>
+                </div>
+              </div>
+              <div class="advantage__list-item-text">Произвольные сценарии и ветвления диалога в зависимости от контекста.</div>
+            </div>
+            <div class="advantage__list-item">
+              <div class="advantage__list-item-row">
+                <div class="advantage__list-item-left"></div>
+                <div class="advantage__list-item-right">
+                  <div class="advantage__list-item-title">Оплата товаров или услуг</div>
+                </div>
+              </div>
+              <div class="advantage__list-item-text">Возможно подключить любую платежную систему и выписывать счета.</div>
+            </div>
+            <div class="advantage__list-item">
+              <div class="advantage__list-item-row">
+                <div class="advantage__list-item-left"></div>
+                <div class="advantage__list-item-right">
+                  <div class="advantage__list-item-title">Искусственный интеллект</div>
+                </div>
+              </div>
+              <div class="advantage__list-item-text">Разумное поведение бота, почти как человек.</div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer-->
     <!--mixin footer()footer-->
