--- a/www/home.html
+++ b/www/home.html
@@ -562,6 +562,150 @@
           </div>
         </div>
       </section>
+      <section class="example">
+        <div data-line></div>
+        <div class="example__container container">
+          <div class="example__title">Примеры работ</div>
+          <div class="example__slider-wrap">
+            <div class="example__slider-counter">
+              <div class="example__slider-counter-current"></div>
+              <div class="example__slider-counter-total"></div>
+            </div>
+            <div class="example__slider-btn">
+              <a class="btn btn_default" href="#!">Заказать себе бот</a>
+            </div>
+            <div class="example__slider">
+              <div class="example__slider-item">
+                <div class="example__slider-row">
+                  <div class="example__slider-left">
+                    <div class="example__slider-image">
+                      <img class="example__slider-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
+                      <svg class="example__slider-image-svg" viewBox="0 0 393.2 373.7" preserveAspectRatio="none">
+                        <path d="M393.2,179.6v5.2C393.2,183.1,393.2,181.3,393.2,179.6z"></path>
+                        <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393.2V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="example__slider-right">
+                    <div class="example__slider-title">Киевский зоопарк</div>
+                    <div class="example__slider-text">
+                      <p>
+                        <strong>Задача:</strong> В связи с большим количеством простых запросов от клиентов, нужно было снизить нагрузку на колл центр заведения и упростить пользователю комуникацию по интересующим его вопросам.</p>
+                      <p>
+                        <strong>Результат:</strong> Разработан универсальный бот для месенджера Facebook, который сизил нагрузку на колл центр на 34% в течение первых 2 месяцев после запуска.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="example__slider-item">
+                <div class="example__slider-row">
+                  <div class="example__slider-left">
+                    <div class="example__slider-image">
+                      <img class="example__slider-img" src="static/img/content/loc-slider-2.jpg" alt="image" title="" />
+                      <svg class="example__slider-image-svg" viewBox="0 0 393.2 373.7" preserveAspectRatio="none">
+                        <path d="M393.2,179.6v5.2C393.2,183.1,393.2,181.3,393.2,179.6z"></path>
+                        <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393.2V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="example__slider-right">
+                    <div class="example__slider-title">Новостные агенства и популярные агенства</div>
+                    <div class="example__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов.</div>
+                  </div>
+                </div>
+              </div>
+              <div class="example__slider-item">
+                <div class="example__slider-row">
+                  <div class="example__slider-left">
+                    <div class="example__slider-image">
+                      <img class="example__slider-img" src="static/img/content/loc-slider-3.jpg" alt="image" title="" />
+                      <svg class="example__slider-image-svg" viewBox="0 0 393.2 373.7" preserveAspectRatio="none">
+                        <path d="M393.2,179.6v5.2C393.2,183.1,393.2,181.3,393.2,179.6z"></path>
+                        <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393.2V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
+                      </svg>
+                    </div>
+                  </div>
+                  <div class="example__slider-right">
+                    <div class="example__slider-title">Новостные агенства будущего</div>
+                    <div class="example__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="top">
+        <div data-line></div>
+        <div class="top__container container">
+          <div class="top__title">Интересные статьи о ботах</div>
+          <div class="top__list">
+            <div class="card top__list-item">
+              <div class="card__image">
+                <img class="card__image-img" alt="" role="presentation" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" />
+                <svg class="card__image-svg" viewBox="0 0 297.3 217.1" preserveAspectRatio="none">
+                  <path d="M127.6,217.1h-0.5C127.3,217.1,127.4,217.1,127.6,217.1z"></path>
+                  <path d="M297.3,0H0v217.1h127.1c-33.1-0.2-64.9-9.1-88.4-31.9C-24.1,124.6-1.7,78.1,43.9,49C89.6,19.9,177.8-30,240,24.1s76.2,105,29.8,144.6c-28.9,24.7-87.2,48.6-142.3,48.4h169.7V0z"></path>
+                </svg>
+              </div>
+              <div class="card__title">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</div>
+              <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про выполняющая автоматичеcкие пироги с вишнейвыполняющая автоматичеcкие пироги с вишней</div>
+              <a class="link card__link"
+                href="#!">
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__circle"></div>
+              </a>
+            </div>
+            <div class="card top__list-item">
+              <div class="card__image">
+                <img class="card__image-img" alt="" role="presentation" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" />
+                <svg class="card__image-svg" viewBox="0 0 297.3 217.1" preserveAspectRatio="none">
+                  <path d="M127.6,217.1h-0.5C127.3,217.1,127.4,217.1,127.6,217.1z"></path>
+                  <path d="M297.3,0H0v217.1h127.1c-33.1-0.2-64.9-9.1-88.4-31.9C-24.1,124.6-1.7,78.1,43.9,49C89.6,19.9,177.8-30,240,24.1s76.2,105,29.8,144.6c-28.9,24.7-87.2,48.6-142.3,48.4h169.7V0z"></path>
+                </svg>
+              </div>
+              <div class="card__title">Как создать чат-бота, который ухудшит ваш бизнес</div>
+              <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про выполняющая автоматичеcкие пироги с вишнейвыполняющая автоматичеcкие пироги с вишней</div>
+              <a class="link card__link"
+                href="#!">
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__circle"></div>
+              </a>
+            </div>
+            <div class="card top__list-item">
+              <div class="card__image">
+                <img class="card__image-img" alt="" role="presentation" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" />
+                <svg class="card__image-svg" viewBox="0 0 297.3 217.1" preserveAspectRatio="none">
+                  <path d="M127.6,217.1h-0.5C127.3,217.1,127.4,217.1,127.6,217.1z"></path>
+                  <path d="M297.3,0H0v217.1h127.1c-33.1-0.2-64.9-9.1-88.4-31.9C-24.1,124.6-1.7,78.1,43.9,49C89.6,19.9,177.8-30,240,24.1s76.2,105,29.8,144.6c-28.9,24.7-87.2,48.6-142.3,48.4h169.7V0z"></path>
+                </svg>
+              </div>
+              <div class="card__title">Зачем бизнесу нужен чат-бот?</div>
+              <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про выполняющая автоматичеcкие пироги с вишнейвыполняющая автоматичеcкие пироги с вишней</div>
+              <a class="link card__link"
+                href="#!">
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__dot"></div>
+                <div class="link__circle"></div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer-->
     <!--mixin footer()footer-->
